增加zookeeper监听器,监控zookeeper节点变化

--- a/resources/conf.properties
+++ b/resources/conf.properties
@@ -2,6 +2,7 @@ name=xiaoa
 
 #email
 email.hostName=smtp.qq.com
-email.username=
+email.username=Towanm@foxmail.com
 email.password=jgvvmymzigynbahd
+email.password2=sfjjajfpwjhzbcja
 #email
